manifests/monitoring/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: monitoring
  labels:
    app: dashboard
spec:
  # type: NodePort
  ports:
  - port: 9090
  selector:
    app: dashboard
