manifests/monitoring/dashboard/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard
  namespace: monitoring
  labels:
    app: dashboard
  annotations:
    ingress.kubernetes.io/auth-secret: dashboard-basic-auth
    ingress.kubernetes.io/auth-type: basic
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: dashboard.kube.codeformuenster.org
    http:
      paths:
      - backend:
          serviceName: dashboard
          servicePort: 9090
        path: /
  tls:
  - hosts:
    - dashboard.kube.codeformuenster.org
    secretName: dashboard-tls
